generated/checkers/gen/AllGen-UAF-7decd1f5904a489d3ccdcf131972f94645681689/build_logs/syntax-repair-06/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:114:57: error: cannot convert ‘clang::ento::DefaultProgramStatePartialTraitImpl<bool>::data_type’ {aka ‘bool’} to ‘const bool*’ in initialization
  114 |   const bool *UnlockedPtr = State->get<InUnlockedRegion>();
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                         |
      |                                                         clang::ento::DefaultProgramStatePartialTraitImpl<bool>::data_type {aka bool}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:144:21: error: base operand of ‘->’ has non-pointer type ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’
  144 |       if (Set && Set->contains(LReg)) {
      |                     ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkLocation(clang::ento::SVal, bool, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:158:57: error: cannot convert ‘clang::ento::DefaultProgramStatePartialTraitImpl<bool>::data_type’ {aka ‘bool’} to ‘const bool*’ in initialization
  158 |   const bool *UnlockedPtr = State->get<InUnlockedRegion>();
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                         |
      |                                                         clang::ento::DefaultProgramStatePartialTraitImpl<bool>::data_type {aka bool}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:187:17: error: base operand of ‘->’ has non-pointer type ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’
  187 |   if (Set && Set->contains(BaseVarReg)) {
      |                 ^~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
